# notionia

./: .gitignore  LICENSE  README.md  run.ps1
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/agent/: notion_agent.py  system_prompt.yaml
backend/src/api/: app.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: NotionAgentInterface.css  NotionAgentInterface.tsx
images/: README.md
