[project]
name = "notionia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.10",
    "langchain-core>=0.3.40",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.1",
    "notion-client>=2.3.0",
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_backend"

[tool.ruff]
# Habilitar el formateador de Ruff
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
